updated README on how to run tests from console + minor changes